# py-xiaozhi

./: .cursorignore  main.py  pyproject.toml
.cursor/rules/: analyzer.mdc  developer.mdc
.specstory/history/: code-optimization-and-design-framework.md  不同系统的poetry安装配置整合.md
src/: application.py
src/protocols/: mqtt_protocol.py  protocol.py  websocket_protocol.py
