[tool.poetry]
name = "py-xiaozhi"
version = "0.1.0"
description = ""
authors = ["nephilimbin <514026307@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.7.0"
anyio = "4.9.0"
certifi = "2025.1.31"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
colorama = "0.4.6"
comtypes = "1.4.6"
cryptography = "44.0.1"
distro = "1.9.0"
exceptiongroup = "1.2.2"
httpcore = "1.0.7"
httpx = "0.28.1"
numpy = "2.0.2"
openai = "1.66.3"
opencv-python = "4.11.0.86"
opuslib = "3.0.1"
paho-mqtt = "2.1.0"
psutil = "7.0.0"
PyAudio = "0.2.14"
pydantic = "2.10.6"
pynput = "1.8.0"
pyperclip = "1.9.0"
pypinyin = "0.53.0"
requests = "2.32.3"
srt = "3.5.3"
tqdm = "4.67.1"
vosk = "0.3.44"
websockets = "11.0.3"
colorlog = "6.9.0"

[tool.poetry.group.mac.dependencies]
applescript = "2021.2.9"
vosk = "0.3.44"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
